--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
-streamlit
-spacy
-numpy
-scikit-learn
 pdfminer.six
 python-docx
 fpdf
+streamlit
+numpy
+pandas
+scikit-learn
 matplotlib
-sentence-transformers
 torch
-en-core-web-sm
+sentence-transformers
+spacy==3.7.2
+en-core-web-sm==3.7.1
+
 
 
 
